--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     <h1>Bienvenidos a nuestro proyecto</h1>
-    
+    <p>Hola mundo</p>
 </body>
 </html>
